Migrated to Java 9.